Fix alignment of delete icons

--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -61,7 +61,8 @@
 }
 
 .justify-start,
-.button-list button {
+.button-list > button,
+.button-list button:first-child {
     justify-content: start;
 }
 
